--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,7 @@
 {
-    "welcome":"welcome to our website"
+    "welcome":"welcome to our website",
+    "language":"en",
+    "auction":"auction",
+    "shareAdv":"post your ad",
+    "search":"search"
 }
