--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,3 +1,7 @@
-{
-    "welcome":"أهلا بك في موقعنا"
+{ 
+    "welcome":"أهلا بك في موقعنا",
+    "language":"ar",
+    "auction":"المزاد",
+    "shareAdv":"انشر اعلانك",
+    "search":"البحث"
 }
