--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -3,5 +3,6 @@
     "language":"ar",
     "auction":"المزاد",
     "shareAdv":"انشر اعلانك",
-    "search":"البحث"
+    "search":"البحث",
+    "viewProfile":"عرض الملف الشخصي"
 }
