--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -27,5 +27,13 @@
     },
     "copyRight": "جميع الحقوق محفوظة ل سوق الانتاج الحيوانى (ِAPM) 2025",
     "development": "تم التطوير بواسطة Soft Forte"
+  },
+  "ads":{
+    "title":"اعلاناتي",
+    "filterSection":{
+      "status":"حالة الاعلان",
+      "all":"الكل"
+    },
+    "makeAds":"انشر اعلانك"
   }
 }
