--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -30,10 +30,15 @@
   },
   "ads":{
     "title":"اعلاناتي",
+    "noContent":"ليس لديك اعلانات  في الوقت الحالي",
     "filterSection":{
       "status":"حالة الاعلان",
       "all":"الكل"
     },
-    "makeAds":"انشر اعلانك"
+    "makeAds":"انشر اعلانك",
+    "watcher":"عدد المشاهدات",
+    "interested":"عملاء مهتمون",
+    "concurrency":"جنية",
+    "sell":"بيع اسرع"
   }
 }
