handle register page

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -9,6 +9,7 @@
       "title": "تسجيل الدخول",
       "adminTitle": "تسجيل دخول المسؤول",
       "email": "البريد الإلكتروني",
+      "phone": "رقم الهاتف",
       "emailRequired": "البريد الإلكتروني مطلوب",
       "password": "كلمة المرور",
       "loginButton": "تسجيل الدخول",
@@ -25,6 +26,7 @@
     "register": {
       "title": "إنشاء حساب",
       "chooseCountry": "اختيار الدولة",
+      "uploadProfileImage": "تحميل صورة الملف الشخصي",
       "selectCountry": "اختر الدولة",
       "countryRequired": "يرجى اختيار الدولة",
       "selectCountryFirst": "يرجى اختيار الدولة أولاً",
@@ -47,7 +49,7 @@
       "passwordMismatch": "كلمتا المرور غير متطابقتين",
       "accountType": "نوع الحساب",
       "individual": "فردي",
-      "organization": "شركة",
+      "organization": "شركات",
       "next": "التالي",
       "back": "رجوع",
       "createButton": "إنشاء الحساب",
