--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,6 +8,7 @@
         "login": {
             "title": "Login",
             "email": "Email",
+            "phone": "Phone Number",
             "emailRequired": "Email is required",
             "password": "Password",
             "loginButton": "Login",
@@ -25,6 +26,7 @@
             "title": "Create Account",
             "chooseCountry": "Choose Country",
             "selectCountry": "Select Country",
+            "uploadProfileImage": "Upload Profile Image",
             "countryRequired": "Please select a country",
             "selectCountryFirst": "Please select a country first",
             "name": "Full Name",
@@ -46,7 +48,7 @@
             "passwordMismatch": "Passwords do not match",
             "accountType": "Account Type",
             "individual": "Individual",
-            "organization": "Organization",
+            "organization": "Organizations",
             "next": "Next",
             "back": "Back",
             "createButton": "Create Account",
