add profile - update profile - verify account

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -98,6 +98,45 @@
     "concurrency": "جنية",
     "sell": "بيع اسرع"
   },
+  "profile": {
+    "title": "الملف الشخصي",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم التليفون",
+    "country": "البلد",
+    "governorate": "المحافظة",
+    "password": "كلمة المرور",
+    "editProfile": "تعديل الملف الشخصي",
+    "verifyAccount": "وثق حسابك",
+    "saveChanges": "حفظ التعديل",
+    "verificationTitle": "توثيق الحساب",
+    "idCardFront": "وجه البطاقة",
+    "idCardBack": "ظهر البطاقة",
+    "personalPhoto": "صورة شخصية",
+    "uploadIdFront": "رفع وجه البطاقة",
+    "uploadIdBack": "رفع ظهر البطاقة",
+    "uploadPersonalPhoto": "رفع صورة شخصية",
+    "submitVerification": "إرسال طلب التوثيق",
+    "verificationInfo": "لتوثيق حسابك لبيع أسرع وزيادة مصداقيتك، قم برفع صورة البطاقة وصورة شخصية ورقم الموبايل والإيميل.",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "confirmPasswordPlaceholder": "تأكيد كلمة المرور الجديدة",
+    "passwordPlaceholder": "اتركه فارغاً إذا لم ترد تغيير كلمة المرور",
+    "passwordMismatch": "كلمتا المرور غير متطابقتين",
+    "saveSuccess": "تم حفظ التعديلات بنجاح",
+    "saveError": "حدث خطأ أثناء حفظ التعديلات",
+    "uploadRequired": "يرجى رفع جميع الصور المطلوبة",
+    "submitError": "حدث خطأ أثناء إرسال الطلب",
+    "loading": "جاري التحميل...",
+    "error": "حدث خطأ أثناء تحميل الملف الشخصي",
+    "emailReadOnly": "البريد الإلكتروني",
+    "phoneReadOnly": "رقم الهاتف",
+    "id":"البطاقة الشخصية",
+    "successModal": {
+      "title": "تم إرسال طلبك",
+      "message": "تم إرسال طلبك وسوف يتم الرد في أسرع وقت",
+      "backToHome": "الرجوع إلى الصفحة الرئيسية"
+    }
+  },
   "common": {
     "loading": "جاري التحميل...",
     "error": "خطأ",
