--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -101,6 +101,45 @@
         "concurrency": "EGP",
         "sell": "Sell Faster"
     },
+    "profile": {
+        "title": "Profile",
+        "name": "Name",
+        "email": "Email",
+        "phone": "Phone Number",
+        "country": "Country",
+        "governorate": "Governorate",
+        "password": "Password",
+        "editProfile": "Edit Profile",
+        "verifyAccount": "Verify Your Account",
+        "saveChanges": "Save Changes",
+        "verificationTitle": "Account Verification",
+        "idCardFront": "ID Card Front",
+        "idCardBack": "ID Card Back",
+        "personalPhoto": "Personal Photo",
+        "uploadIdFront": "Upload ID Front",
+        "uploadIdBack": "Upload ID Back",
+        "uploadPersonalPhoto": "Upload Personal Photo",
+        "submitVerification": "Submit Verification Request",
+        "verificationInfo": "To verify your account for faster selling and increased credibility, please upload your ID card photo, personal photo, mobile number, and email.",
+        "confirmPassword": "Confirm Password",
+        "confirmPasswordPlaceholder": "Confirm new password",
+        "passwordPlaceholder": "Leave blank if you don't want to change password",
+        "passwordMismatch": "Passwords do not match",
+        "saveSuccess": "Changes saved successfully",
+        "saveError": "An error occurred while saving changes",
+        "uploadRequired": "Please upload all required images",
+        "submitError": "An error occurred while submitting the request",
+        "loading": "Loading...",
+        "error": "An error occurred while loading the profile",
+        "emailReadOnly": "Email",
+        "phoneReadOnly": "Phone Number",
+        "id":"ID Card",
+        "successModal": {
+            "title": "Request Submitted",
+            "message": "Your request has been submitted and will be reviewed as soon as possible",
+            "backToHome": "Back to Home Page"
+        }
+    },
     "common": {
         "loading": "Loading...",
         "error": "Error",
