--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -20,9 +20,9 @@
     "log out":"log out",
     "country":"country",
     "create account":"create account",
-    "log in":"log in"
-    
-    
+    "log in":"log in",
+    "sign up":"sign up",
+    "sign in":"sign in",
     "products":"products",
     "sacrifice":"sacrifice",
     "animals":"animals",
