--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -37,7 +37,7 @@
     "log out":"تسجيل الخروج",
     "country":"الدولة",
     "create account":"إنشاء حساب",
-    "log in":"تسجيل الدخول"
+    "log in":"تسجيل الدخول",
 
   
   "auth": {
