add product flow - fix nav

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -1,45 +1,42 @@
 {
-    "welcome":"أهلا بك في موقعنا",
-    "language":"اللغة",
-    "auction":"المزاد",
-    "shareAdv":"انشر اعلانك",
-    "search":"البحث",
+  "welcome": "أهلا بك في موقعنا",
+  "language": "اللغة",
+  "auction": "المزاد",
+  "shareAdv": "انشر اعلانك",
+  "search": "البحث",
 
-  
-    "products":"المنتجات",
-    "sacrifice":"الاضحية",
-    "animals":"الحيوانات",
-    "pure breeds":"السلالات الاصيلة",
-    "butchery":"الجزارة",
-    "birds":"الطيور",
-    "animal products":"منتجات الحيوانات",
-    "fodder":"الاعلاف",
-    "farming supplies":"متطلبات المزارع",
-    "veterinary supervision services":"خدمات الاشراف البيطري",
-    "fish and others":"السمك وأخري",
-    "articles":"المقالات",
-    "veterinary medicines":"أدوية بيطرية",
-    "leather and fur":"الجلود والفراء",
-    "veterinary testing laboratories":"مختبارات التحاليل البيطارية",
+  "products": "المنتجات",
+  "sacrifice": "الاضحية",
+  "animals": "الحيوانات",
+  "pure breeds": "السلالات الاصيلة",
+  "butchery": "الجزارة",
+  "birds": "الطيور",
+  "animal products": "منتجات الحيوانات",
+  "fodder": "الاعلاف",
+  "farming supplies": "متطلبات المزارع",
+  "veterinary supervision services": "خدمات الاشراف البيطري",
+  "fish and others": "السمك وأخري",
+  "articles": "المقالات",
+  "veterinary medicines": "أدوية بيطرية",
+  "leather and fur": "الجلود والفراء",
+  "veterinary testing laboratories": "مختبارات التحاليل البيطارية",
 
-  
-    "viewProfile":"عرض الملف الشخصي",
-    "favorite ads":"الاعلانات المفضلة",
-    "subscriptions":"الاشتراكات",
-    "contact us":"تواصل معنا",
-    "share the app":"شارك التطبيق",
-    "my ads":"اعلاناتي",
-    "notifications":"الاشعارات",
-    "subscriptions and invoices":"الاشتراكات والفواتير",
-    "today's meat price":"سعر اللحم اليوم",
-    "about us":"من نحن",
-    "privacy, terms, and conditions":"الخصوصية والشروط والاحكام",
-    "log out":"تسجيل الخروج",
-    "country":"الدولة",
-    "create account":"إنشاء حساب",
-    "log in":"تسجيل الدخول",
+  "viewProfile": "عرض الملف الشخصي",
+  "favorite ads": "الاعلانات المفضلة",
+  "subscriptions": "الاشتراكات",
+  "contact us": "تواصل معنا",
+  "share the app": "شارك التطبيق",
+  "my ads": "اعلاناتي",
+  "notifications": "الاشعارات",
+  "subscriptions and invoices": "الاشتراكات والفواتير",
+  "today's meat price": "سعر اللحم اليوم",
+  "about us": "من نحن",
+  "privacy, terms, and conditions": "الخصوصية والشروط والاحكام",
+  "log out": "تسجيل الخروج",
+  "country": "الدولة",
+  "create account": "إنشاء حساب",
+  "log in": "تسجيل الدخول",
 
-  
   "auth": {
     "login": {
       "title": "تسجيل الدخول",
@@ -105,6 +102,13 @@
       "price": "{{price}} جنيه",
       "location": "حدائق المعادي",
       "productTitle": "سادية صدور دجاج 450غ"
+    },
+    "categories": {
+      "title": "المنتجات",
+      "empty": "لا توجد تصنيفات متاحة",
+      "empty_description": "لم يتم إضافة اي تصنيفات بعد",
+      "inactive": "غير متاح",
+      "publishTitle":"انشر إعلانك"
     }
   },
   "footer": {
@@ -122,17 +126,64 @@
     "development": "تم التطوير بواسطة Soft Forte"
   },
   "ads": {
-    "title": "اعلاناتي",
-    "noContent": "ليس لديك اعلانات في الوقت الحالي",
+    "title": "إعلاناتي",
+    "noContent": "ليس لديك إعلانات في الوقت الحالي",
     "filterSection": {
-      "status": "حالة الاعلان",
-      "all": "الكل"
+      "status": "حالة الإعلان",
+      "all": "الكل",
+      "allCategories": "كل التصنيفات"
     },
-    "makeAds": "انشر اعلانك",
+    "makeAds": "انشر إعلانك",
     "watcher": "عدد المشاهدات",
     "interested": "عملاء مهتمون",
-    "concurrency": "جنية",
-    "sell": "بيع اسرع"
+    "concurrency": "جنيه",
+    "sell": "بيع أسرع",
+
+    "publishYourAd": "انشر إعلانك",
+    "editYourAd": "تعديل إعلانك",
+    "clickToUpload": "اضغط لرفع الصورة",
+    "pngOrJpg": "PNG أو JPG (حد أقصى 5 ميجا)",
+    "adType": "نوع",
+    "selectAdType": "اختر النوع",
+    "type": "نوع",
+    "selectType": "اختر النوع",
+    "adNameEn": "اسم الإعلان (باللغة الإنجليزية)",
+    "adNameAr": "اسم الإعلان (باللغة العربية)",
+    "adNamePlaceholderAr": "أدخل اسم الإعلان (باللغة العربية)",
+    "adNamePlaceholderEn": "أدخل اسم الإعلان (باللغة الإنجليزية)",
+    "descriptionAr": "الوصف (باللغة العربية)",
+    "descriptionEn": "الوصف (باللغة الإنجليزية)",
+    "descriptionPlaceholderAr": "اكتب وصفاً تفصيلياً (باللغة العربية)",
+    "descriptionPlaceholderEn": "اكتب وصفاً تفصيلياً (باللغة الإنجليزية)",
+    "gender": "النوع",
+    "male": "ذكر",
+    "female": "أنثى",
+    "reservationCount": "الكمية",
+    "price": "السعر",
+    "age": "العمر",
+    "agePlaceholder": "ادخل العمر",
+    "governorate": "المحافظة",
+    "selectGovernorate": "اختر المحافظة",
+    "location": "العنوان",
+    "locationPlaceholder": "أدخل العنوان التفصيلي",
+    "quantity": "عدد الرؤوس",
+    "health": "خيارات إضافية",
+    "deliveryAvailable": "التوصيل متاح",
+    "needsVaccinations": "يحتاج تطعيمات",
+    "retailSaleAvailable": "البيع بالقطعة متاح",
+    "priceNegotiable": "السعر قابل للتفاوض",
+    "contactMethod": "طريقة التواصل",
+    "selectContactMethod": "اختر طريقة التواصل",
+    "call": "مكالمة",
+    "whatsapp": "واتساب",
+    "both": "كلاهما",
+    "publish": "نشر الإعلان",
+    "update": "تحديث الإعلان",
+    "delete": "حذف الإعلان",
+    "deleteConfirmTitle": "تأكيد الحذف",
+    "deleteConfirmMessage": "هل أنت متأكد من حذف هذا الإعلان؟ لا يمكن التراجع عن هذا الإجراء.",
+    "yes": "نعم",
+    "no": "لا"
   },
   "profile": {
     "title": "الملف الشخصي",
@@ -166,7 +217,7 @@
     "error": "حدث خطأ أثناء تحميل الملف الشخصي",
     "emailReadOnly": "البريد الإلكتروني",
     "phoneReadOnly": "رقم الهاتف",
-    "id":"البطاقة الشخصية",
+    "id": "البطاقة الشخصية",
     "businessDocs": "الوثائق التجارية",
     "uploadCommercialRecord": "رفع صورة السجل التجاري",
     "uploadTaxCard": "رفع صورة البطاقة الضريبية",
