--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,46 +1,41 @@
 {
-    "welcome":"welcome to our website",
-    "language":"language",
-    "auction":"auction",
-    "shareAdv":"post your ad",
-    "search":"search",
-
-    
+    "welcome": "welcome to our website",
+    "language": "language",
+    "auction": "auction",
+    "shareAdv": "post your ad",
+    "search": "search",
     "viewProfile": "view profile",
-    "favorite ads":"favorite ads",
-    "subscriptions":"subscriptions",
-    "contact us":"contact us",
-    "share the app":"share the app",
-    "my ads":"my ads",
-    "notifications":"notifications",
-    "subscriptions and invoices":"subscriptions and invoices",
-    "today's meat price":"today's meat price",
-    "about us":"about us",
-    "privacy, terms, and conditions":"privacy, terms, and conditions",
-    "log out":"log out",
-    "country":"country",
-    "create account":"create account",
-    "log in":"log in",
-    "sign up":"sign up",
-    "sign in":"sign in",
-    "products":"products",
-    "sacrifice":"sacrifice",
-    "animals":"animals",
-    "pure breeds":"pure breeds",
-    "butchery":"butchery",
-    "birds":"birds",
-    "animal products":"animal products",
-    "fodder":"fodder",
-    "farming supplies":"farming supplies",
-    "veterinary supervision services":"veterinary supervision services",
-    "fish and others":"fish and others",
-    "articles":"articles",
-    "veterinary medicines":"veterinary medicines",
-    "leather and fur":"leather and fur",
-    "veterinary testing laboratories":"veterinary testing laboratories",
-
-
-    
+    "favorite ads": "favorite ads",
+    "subscriptions": "subscriptions",
+    "contact us": "contact us",
+    "share the app": "share the app",
+    "my ads": "my ads",
+    "notifications": "notifications",
+    "subscriptions and invoices": "subscriptions and invoices",
+    "today's meat price": "today's meat price",
+    "about us": "about us",
+    "privacy, terms, and conditions": "privacy, terms, and conditions",
+    "log out": "log out",
+    "country": "country",
+    "create account": "create account",
+    "log in": "log in",
+    "sign up": "sign up",
+    "sign in": "sign in",
+    "products": "products",
+    "sacrifice": "sacrifice",
+    "animals": "animals",
+    "pure breeds": "pure breeds",
+    "butchery": "butchery",
+    "birds": "birds",
+    "animal products": "animal products",
+    "fodder": "fodder",
+    "farming supplies": "farming supplies",
+    "veterinary supervision services": "veterinary supervision services",
+    "fish and others": "fish and others",
+    "articles": "articles",
+    "veterinary medicines": "veterinary medicines",
+    "leather and fur": "leather and fur",
+    "veterinary testing laboratories": "veterinary testing laboratories",
     "auth": {
         "login": {
             "title": "Login",
@@ -105,6 +100,13 @@
             "price": "{{price}} EGP",
             "location": "Maadi Gardens",
             "productTitle": "Sadia Chicken Breast 450g"
+        },
+        "categories": {
+            "title": "Products",
+            "empty": "No categories available",
+            "empty_description": "No categories have been added yet",
+            "inactive": "Not available",
+            "publishTitle":"Publish your ad"
         }
     },
     "footer": {
@@ -130,13 +132,58 @@
         "noContent": "You don't have any ads at the moment",
         "filterSection": {
             "status": "Ad Status",
-            "all": "All"
+            "all": "All",
+            "allCategories": "All categories"
         },
         "makeAds": "Post your ad",
         "watcher": "Views",
         "interested": "Interested Customers",
         "concurrency": "EGP",
-        "sell": "Sell Faster"
+        "sell": "Sell Faster",
+        "publishYourAd": "Publish Your Ad",
+        "editYourAd": "Edit Your Ad",
+        "clickToUpload": "Click to upload image",
+        "pngOrJpg": "PNG or JPG (Max 5MB)",
+        "adType": "Ad Type",
+        "selectAdType": "Select ad type",
+        "type": "Type of",
+        "selectType": "Select type",
+        "adNameEn": "Add Name (In Arabic)",
+        "adNameAr": "Add Name (In English)",
+        "adNamePlaceholderAr": "Enter ad name in Arabic",
+        "adNamePlaceholderEn": "Enter ad name in English",
+        "descriptionAr": "Description (In Arabic)",
+        "descriptionEn": "Description (In English)",
+        "descriptionPlaceholderAr": "Write a detailed description (In Arabic)",
+        "descriptionPlaceholderEn": "Write a detailed description (In English)",
+        "gender": "Gender",
+        "male": "Male",
+        "female": "Female",
+        "reservationCount": "Quantity",
+        "price": "Price",
+        "age": "Age",
+        "agePlaceholder": "Enter age",
+        "governorate": "Governorate",
+        "selectGovernorate": "Select governorate",
+        "location": "Adress",
+        "locationPlaceholder": "Enter detailed address",
+        "quantity": "Quantity",
+        "health": "Additional Options",
+        "deliveryAvailable": "Delivery Available",
+        "needsVaccinations": "Needs Vaccinations",
+        "retailSaleAvailable": "Retail Sale Available",
+        "priceNegotiable": "Price Negotiable",
+        "contactMethod": "Contact Method",
+        "publish": "Publish Ad",
+        "call": "Phone Call",
+        "whatsapp": "Whatsapp",
+        "both": "Both",
+        "update": "Update Ad",
+        "delete": "Delete Ad",
+        "deleteConfirmTitle": "Confirm Delete",
+        "deleteConfirmMessage": "Are you sure you want to delete this ad? This action cannot be undone.",
+        "yes": "Yes",
+        "no": "No"
     },
     "profile": {
         "title": "Profile",
@@ -170,7 +217,7 @@
         "error": "An error occurred while loading the profile",
         "emailReadOnly": "Email",
         "phoneReadOnly": "Phone Number",
-        "id":"ID Card",
+        "id": "ID Card",
         "businessDocs": "Business Documents",
         "uploadCommercialRecord": "Upload Commercial Record Image",
         "uploadTaxCard": "Upload Tax Card Image",
