--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -4,7 +4,8 @@
   "auction": "المزاد",
   "shareAdv": "انشر اعلانك",
   "search": "البحث",
-
+"menu":"القائمة",
+"notification":"الإشعارات",
   "products": "المنتجات",
   "sacrifice": "الاضحية",
   "animals": "الحيوانات",
@@ -27,7 +28,6 @@
   "contact us": "تواصل معنا",
   "share the app": "شارك التطبيق",
   "my ads": "اعلاناتي",
-  "notifications": "الاشعارات",
   "subscriptions and invoices": "الاشتراكات والفواتير",
   "today's meat price": "سعر اللحم اليوم",
   "about us": "من نحن",
@@ -36,7 +36,6 @@
   "country": "الدولة",
   "create account": "إنشاء حساب",
   "log in": "تسجيل الدخول",
-
   "auth": {
     "login": {
       "title": "تسجيل الدخول",
@@ -151,6 +150,7 @@
     "adNameAr": "اسم الإعلان (باللغة العربية)",
     "adNamePlaceholderAr": "أدخل اسم الإعلان (باللغة العربية)",
     "adNamePlaceholderEn": "أدخل اسم الإعلان (باللغة الإنجليزية)",
+    "description":"وصف المنتج",
     "descriptionAr": "الوصف (باللغة العربية)",
     "descriptionEn": "الوصف (باللغة الإنجليزية)",
     "descriptionPlaceholderAr": "اكتب وصفاً تفصيلياً (باللغة العربية)",
@@ -175,7 +175,7 @@
     "contactMethod": "طريقة التواصل",
     "selectContactMethod": "اختر طريقة التواصل",
     "call": "مكالمة",
-    "whatsapp": "واتساب",
+    "chat": "محادثة",
     "both": "كلاهما",
     "publish": "نشر الإعلان",
     "update": "تحديث الإعلان",
@@ -232,7 +232,37 @@
     "error": "خطأ",
     "retry": "إعادة المحاولة"
   },
-  "dashboard": {
+"messages": {
+  "title": "الرسائل",
+  "noMessages": "لا توجد رسائل في الوقت الحالي",
+  "startConversation": "اضغط على المنتجات لتبدأ محادثة مع البائعين",
+  "searchPlaceholder": "ابحث في الرسائل...",
+  "tabs": {
+    "all": "الكل",
+    "buy": "شراء",
+    "sell": "بيع"
+  },
+  "typePlaceholder": "اكتب رسالتك...",
+  "startChatNow": "ابدأ المحادثة الآن",
+  "selectChat": "اختر محادثة لعرضها"
+},
+"notifications": {
+  "title": "الإشعارات",
+  "noNotifications": "لا توجد إشعارات",
+  "noNotificationsDesc": "ستظهر إشعاراتك هنا عندما تتوفر",
+  "unread": "غير مقروءة",
+  "markAsRead": "تعليم كمقروءة",
+  "markAllAsRead": "تعليم الكل كمقروءة",
+  "delete": "حذف",
+  "clearAll": "حذف الكل",
+  "autoDelete": "سيتم حذف الإشعارات تلقائياً بعد 30 يوم",
+  "filter": {
+    "all": "الكل",
+    "unread": "غير مقروءة",
+    "read": "مقروءة"
+  }
+},
+"dashboard": {
     "sidebar": {
       "accounts": "الحسابات",
       "posts": "المنشورات",
@@ -251,23 +281,30 @@
       "logout": "تسجيل الخروج",
       "Egypt": "مصر"
     },
-    "additions": {
-      "title": "الإضافات",
-      "addProduct": "إضافة منتج",
-      "addProductTitle": "إضافة منتج",
-      "productName": "اسم المنتج",
-      "productNamePlaceholder": "أدخل اسم المنتج",
-      "productImage": "صورة المنتج",
-      "chooseImage": "اختر صورة",
-      "stop": "إيقاف",
-      "confirmStop": "هل أنت متأكد من إيقاف المنتج",
-      "yes": "نعم",
-      "no": "لا",
-      "successMessage": "تم إيقاف المنتج بنجاح",
-      "productAdded": "تم إضافة المنتج بنجاح",
-      "productNameAr": "اسم المنتج بالعربي",
-      "productNameEn": "اسم المنتج بالإنجليزي"
-    },
+
+  "additions": {
+    "title": "الإضافات",
+    "addProduct": "إضافة منتج",
+    "addProductTitle": "إضافة منتج",
+    "productName": "اسم المنتج",
+    "productNamePlaceholder": "أدخل اسم المنتج",
+    "productImage": "صورة المنتج",
+    "chooseImage": "اختر صورة",
+    "stop": "إيقاف",
+    "confirmStop": "هل أنت متأكد من إيقاف العنصر؟",
+    "yes": "نعم",
+    "no": "لا",
+    "successMessage": "تم إيقاف العنصر بنجاح",
+    "productAdded": "تم إضافة المنتج بنجاح",
+    "productNameAr": "اسم المنتج بالعربي",
+    "productNameEn": "اسم المنتج بالإنجليزي",
+    "addSubCategory": "إضافة فئة فرعية",
+    "addSubCategoryTitle": "إضافة فئة فرعية جديدة",
+    "subCategoryNameAr": "اسم الفئة الفرعية بالعربي",
+    "subCategoryNameEn": "اسم الفئة الفرعية بالإنجليزي",
+    "subCategoryAdded": "تم إضافة الفئة الفرعية بنجاح",
+    "categoryAdded": "تم إضافة الصنف بنجاح"
+},
     "accounts": {
       "title": "الحسابات",
       "export": "تصدير",
@@ -367,6 +404,43 @@
       "errors": {
         "missingId": "خطأ: معرف الفاتورة غير موجود"
       }
+    },
+  "products": {
+    "title": "مراجعة المنتجات",
+    "export": "تصدير",
+    "noProducts": "لا توجد منتجات",
+    
+    "stats": {
+      "totalProducts": "إجمالي المنتجات",
+      "pending": "قيد المراجعة",
+      "accepted": "مقبول",
+      "rejected": "مرفوض"
+    },
+
+    "table": {
+      "seller": "البائع"
+    },
+
+    "details": {
+      "category": "الفئة",
+      "governorate": "المحافظة"
+    },
+
+    "actions": {
+      "accept": "قبول",
+      "reject": "رفض",
+      "delete": "حذف"
+    },
+
+    "messages": {
+      "loadError": "حدث خطأ في تحميل المنتجات",
+      "acceptSuccess": "تم قبول المنتج بنجاح",
+      "rejectSuccess": "تم رفض المنتج بنجاح",
+      "deleteSuccess": "تم حذف المنتج بنجاح",
+      "deleteError": "حدث خطأ في حذف المنتج",
+      "updateError": "حدث خطأ في تحديث الحالة",
+      "exportSuccess": "تم التصدير بنجاح"
     }
+  }
   }
 }
