--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,15 +2,16 @@
     "welcome": "welcome to our website",
     "language": "language",
     "auction": "auction",
+    "menu": "Menu",
     "shareAdv": "post your ad",
     "search": "search",
+    "notification": "notifications",
     "viewProfile": "view profile",
     "favorite ads": "favorite ads",
     "subscriptions": "subscriptions",
     "contact us": "contact us",
     "share the app": "share the app",
     "my ads": "my ads",
-    "notifications": "notifications",
     "subscriptions and invoices": "subscriptions and invoices",
     "today's meat price": "today's meat price",
     "about us": "about us",
@@ -106,7 +107,7 @@
             "empty": "No categories available",
             "empty_description": "No categories have been added yet",
             "inactive": "Not available",
-            "publishTitle":"Publish your ad"
+            "publishTitle": "Publish your ad"
         }
     },
     "footer": {
@@ -152,6 +153,7 @@
         "adNameAr": "Add Name (In English)",
         "adNamePlaceholderAr": "Enter ad name in Arabic",
         "adNamePlaceholderEn": "Enter ad name in English",
+        "description":"Description",
         "descriptionAr": "Description (In Arabic)",
         "descriptionEn": "Description (In English)",
         "descriptionPlaceholderAr": "Write a detailed description (In Arabic)",
@@ -176,7 +178,7 @@
         "contactMethod": "Contact Method",
         "publish": "Publish Ad",
         "call": "Phone Call",
-        "whatsapp": "Whatsapp",
+        "chat": "Chat",
         "both": "Both",
         "update": "Update Ad",
         "delete": "Delete Ad",
@@ -232,6 +234,36 @@
         "error": "Error",
         "retry": "Retry"
     },
+    "messages": {
+        "title": "Messages",
+        "noMessages": "No messages at the moment",
+        "startConversation": "Click on products to start a conversation with sellers",
+        "searchPlaceholder": "Search messages...",
+        "tabs": {
+            "all": "All",
+            "buy": "Buy",
+            "sell": "Sell"
+        },
+        "typePlaceholder": "Type your message...",
+        "startChatNow": "Start the conversation now",
+        "selectChat": "Select a chat to view"
+    },
+    "notifications": {
+        "title": "Notifications",
+        "noNotifications": "No notifications",
+        "noNotificationsDesc": "Your notifications will appear here when available",
+        "unread": "unread",
+        "markAsRead": "Mark as read",
+        "markAllAsRead": "Mark all as read",
+        "delete": "Delete",
+        "clearAll": "Clear all",
+        "autoDelete": "Notifications will be automatically deleted after 30 days",
+        "filter": {
+            "all": "All",
+            "unread": "Unread",
+            "read": "Read"
+        }
+    },
     "dashboard": {
         "sidebar": {
             "accounts": "Accounts",
@@ -260,13 +292,19 @@
             "productImage": "Product Image",
             "chooseImage": "Choose Image",
             "stop": "Stop",
-            "confirmStop": "Are you sure you want to stop the product?",
+            "confirmStop": "Are you sure you want to stop this item?",
             "yes": "Yes",
             "no": "No",
-            "successMessage": "Product stopped successfully",
+            "successMessage": "Item stopped successfully",
             "productAdded": "Product added successfully",
-            "productNameAr": "Product name in Arabic",
-            "productNameEn": "Product name in English"
+            "productNameAr": "Product Name (Arabic)",
+            "productNameEn": "Product Name (English)",
+            "addSubCategory": "Add Subcategory",
+            "addSubCategoryTitle": "Add New Subcategory",
+            "subCategoryNameAr": "Subcategory Name (Arabic)",
+            "subCategoryNameEn": "Subcategory Name (English)",
+            "subCategoryAdded": "Subcategory added successfully",
+            "categoryAdded": "Category added successfully"
         },
         "accounts": {
             "title": "Accounts",
@@ -360,6 +398,43 @@
             "errors": {
                 "missingId": "Error: Invoice ID is missing"
             }
-        }
+        },
+ "products": {
+    "title": "Products Review",
+    "export": "Export",
+    "noProducts": "No products found",
+    
+    "stats": {
+      "totalProducts": "Total Products",
+      "pending": "Pending Review",
+      "accepted": "Accepted",
+      "rejected": "Rejected"
+    },
+
+    "table": {
+      "seller": "Seller"
+    },
+
+    "details": {
+      "category": "Category",
+      "governorate": "Governorate"
+    },
+
+    "actions": {
+      "accept": "Accept",
+      "reject": "Reject",
+      "delete": "Delete"
+    },
+
+    "messages": {
+      "loadError": "Error loading products",
+      "acceptSuccess": "Product accepted successfully",
+      "rejectSuccess": "Product rejected successfully",
+      "deleteSuccess": "Product deleted successfully",
+      "deleteError": "Error deleting product",
+      "updateError": "Error updating status",
+      "exportSuccess": "Exported successfully"
+    }
+  }
     }
 }
